// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArraySchema denormalization Class denormalizes multiple entities with mismatched structures 1`] = `
Array [
  Object {
    "id": "123",
    "type": "cats",
  },
  Object {
    "id": "123",
    "type": "people",
  },
  Object {
    "id": "789",
  },
  Object {
    "id": "456",
    "type": "cats",
  },
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities with mismatched structures 2`] = `
Array [
  Immutable.Map {
    "id": "123",
    "type": "cats",
  },
  Immutable.Map {
    "id": "123",
    "type": "people",
  },
  Object {
    "id": "789",
  },
  Immutable.Map {
    "id": "456",
    "type": "cats",
  },
]
`;
